--- a/cqrs/example1/example-root/pom.xml
+++ b/cqrs/example1/example-root/pom.xml
@@ -19,5 +19,6 @@
   <modules>
   	<module>example-view</module>
   	<module>example-core</module>
+  	<module>example-service</module>
   </modules>
 </project>
