Definition maven module repositories

--- a/cqrs/example1/example-root/pom.xml
+++ b/cqrs/example1/example-root/pom.xml
@@ -20,5 +20,6 @@
   	<module>example-view</module>
   	<module>example-core</module>
   	<module>example-service</module>
+  	<module>example-repositories</module>
   </modules>
 </project>
