--- a/cqrs/example1/example-root/example-repositories/pom.xml
+++ b/cqrs/example1/example-root/example-repositories/pom.xml
@@ -24,4 +24,48 @@
   	
   </dependencies>
   
+  <build>
+  	<plugins>
+  		<plugin>
+  			<groupId>org.codehaus.mojo</groupId>
+  			<artifactId>sql-maven-plugin</artifactId>
+  			<version>3.0.0-SNAPSHOT</version>
+  			
+  			<configuration>
+  				<driver>org.sqlite.JDBC</driver>
+  				<url>jdbc:sqlite:${java.io.tmpdir}/userdb.sqlite</url>
+  			</configuration>
+  			
+  			<executions>
+  				<execution>
+  					<id>create-db</id>
+  					<phase>create-data-base-user</phase>
+  					<goals>
+  						<goal>execute</goal>
+  					</goals>
+  					<configuration>
+  						<url>jdbc:sqlite:${java.io.tmpdir}/userdb.sqlite</url>
+  						<autocommit>true</autocommit>
+  						<sqlCommand>create database userdb</sqlCommand>
+  					</configuration>
+  				</execution>
+  				
+  				<execution>
+  					<id>create-schema</id>
+  					<phase>create-schema-user</phase>
+  					<goals>
+  						<goal>execute</goal>
+  					</goals>
+  					<configuration>
+  						<autocommit>true</autocommit>
+  						<srcFiles>
+  							<srcFile>src/main/resources/schema/user-schema.sql</srcFile>
+  						</srcFiles>
+  					</configuration>
+  				</execution>
+  			</executions>
+  		</plugin>
+  	</plugins>
+  </build>
+  
 </project>
