--- a/cqrs/example1/example-root/example-repositories/pom.xml
+++ b/cqrs/example1/example-root/example-repositories/pom.xml
@@ -22,6 +22,12 @@
   		<version>3.25.2</version>
   	</dependency>
   	
+  	<dependency>
+  		<groupId>org.apache.kafka</groupId>
+  		<artifactId>kafka-clients</artifactId>
+  		<version>2.1.0</version>
+  	</dependency>
+  	
   </dependencies>
   
   <build>
