--- a/cqrs/example1/example-root/example-repositories/pom.xml
+++ b/cqrs/example1/example-root/example-repositories/pom.xml
@@ -9,6 +9,7 @@
   <name>Example Repositories</name>
   <description>This maven module contains the data access components</description>
   
+  
   <dependencies>
   	<dependency>
   		<groupId>es.cqrs</groupId>
@@ -33,43 +34,13 @@
   <build>
   	<plugins>
   		<plugin>
-  			<groupId>org.codehaus.mojo</groupId>
-  			<artifactId>sql-maven-plugin</artifactId>
-  			<version>3.0.0-SNAPSHOT</version>
-  			
+  			<groupId>org.apache.maven.plugins</groupId>
+  			<artifactId>maven-compiler-plugin</artifactId>
+  			<version>3.1</version>
   			<configuration>
-  				<driver>org.sqlite.JDBC</driver>
-  				<url>jdbc:sqlite:${java.io.tmpdir}/userdb.sqlite</url>
+ 				<source>1.8</source>
+ 				<target>1.8</target>
   			</configuration>
-  			
-  			<executions>
-  				<execution>
-  					<id>create-db</id>
-  					<phase>create-data-base-user</phase>
-  					<goals>
-  						<goal>execute</goal>
-  					</goals>
-  					<configuration>
-  						<url>jdbc:sqlite:${java.io.tmpdir}/userdb.sqlite</url>
-  						<autocommit>true</autocommit>
-  						<sqlCommand>create database userdb</sqlCommand>
-  					</configuration>
-  				</execution>
-  				
-  				<execution>
-  					<id>create-schema</id>
-  					<phase>create-schema-user</phase>
-  					<goals>
-  						<goal>execute</goal>
-  					</goals>
-  					<configuration>
-  						<autocommit>true</autocommit>
-  						<srcFiles>
-  							<srcFile>src/main/resources/schema/user-schema.sql</srcFile>
-  						</srcFiles>
-  					</configuration>
-  				</execution>
-  			</executions>
   		</plugin>
   	</plugins>
   </build>
