--- a/cqrs/example1/kafka-consumer-root/kafka-consumer/pom.xml
+++ b/cqrs/example1/kafka-consumer-root/kafka-consumer/pom.xml
@@ -9,6 +9,25 @@
   <name>Kafka Consumer</name>
   <description>Maven module that contains the kafka consumer implementation.</description>
   
-  
+  <dependencies>
+  	<dependency>
+  		<groupId>es.cqrs</groupId>
+  		<artifactId>example-core</artifactId>
+  		<version>0.0.1-SNAPSHOT</version>
+  	</dependency>
+  	
+  	<dependency>
+  		<groupId>org.apache.kafka</groupId>
+  		<artifactId>kafka-clients</artifactId>
+  		<version>2.1.0</version>
+  	</dependency>
+  	
+  	<dependency>
+  		<groupId>org.xerial</groupId>
+  		<artifactId>sqlite-jdbc</artifactId>
+  		<version>3.25.2</version>
+  	</dependency>
+  	
+  </dependencies>
   
 </project>
