Kafka consumer implementation

--- a/cqrs/example1/example-root/example-core/src/main/resources/kafka/config.properties
+++ b/cqrs/example1/example-root/example-core/src/main/resources/kafka/config.properties
@@ -1,4 +1,8 @@
 bootstrap.servers=localhost:9092
 key.serializer=org.apache.kafka.common.serialization.StringSerializer
 value.serializer=es.cqrs.repositories.command.serializer.UserSerializer
+key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+value.deserializer=es.cqrs.kafka.consumer.deserializer.UserDeserializer
 delivery.timeout.ms=30000
+group.id=user
+enable.auto.commit=false
