--- a/cqrs/example1/example-root/pom.xml
+++ b/cqrs/example1/example-root/pom.xml
@@ -8,6 +8,43 @@
   <name>Example Root</name>
   <description>Maven project that contains the relation of modules that form the example.</description>
   
+  <build>
+  	<plugins>
+  		<plugin>
+		    <groupId>org.apache.maven.plugins</groupId>
+		    <artifactId>maven-dependency-plugin</artifactId>
+		    <executions>
+		        <execution>
+		            <id>copy-dependencies</id>
+		            <phase>prepare-package</phase>
+		            <goals>
+		                <goal>copy-dependencies</goal>
+		            </goals>
+		            <configuration>
+		                <outputDirectory>${project.build.directory}/lib</outputDirectory>
+		                <overWriteReleases>false</overWriteReleases>
+		                <overWriteSnapshots>false</overWriteSnapshots>
+		                <overWriteIfNewer>true</overWriteIfNewer>
+		            </configuration>
+		        </execution>
+		    </executions>
+		</plugin>
+		<plugin>
+		    <groupId>org.apache.maven.plugins</groupId>
+		    <artifactId>maven-jar-plugin</artifactId>
+		    <configuration>
+		        <archive>
+		            <manifest>
+		                <addClasspath>true</addClasspath>
+		                <classpathPrefix>lib/</classpathPrefix>
+		                <mainClass>es.cqrs.view.main.EntryPoint</mainClass>
+		            </manifest>
+		        </archive>
+		    </configuration>
+		</plugin>  		
+  	</plugins>
+  </build>
+  
   <dependencies>
   	<dependency>
   		<groupId>junit</groupId>
