Send email imlementation

--- a/cqrs/example1/example-root/example-core/src/main/resources/kafka/config.properties
+++ b/cqrs/example1/example-root/example-core/src/main/resources/kafka/config.properties
@@ -1,6 +1,6 @@
 bootstrap.servers=localhost:9092
 key.serializer=org.apache.kafka.common.serialization.StringSerializer
-value.serializer=es.cqrs.repositories.command.serializer.UserSerializer
+value.serializer=es.cqrs.core.actor.serializer.UserSerializer
 key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 value.deserializer=es.cqrs.kafka.consumer.deserializer.UserDeserializer
 delivery.timeout.ms=30000
